Fix a link bug on mobile viewport [elifesciences/enhanced-preprints-issues#1114]

--- a/src/components/atoms/review-process/review-process.scss
+++ b/src/components/atoms/review-process/review-process.scss
@@ -43,6 +43,7 @@
   @include typography.font-size-and-vertical-height(14, 20);
 
   color: var(--link-reviewed);
+  display: block;
   font-family: var(--font-family-primary);
   font-weight: 600;
   text-decoration: none;
